--- a/src/components/Auth/Signup.css
+++ b/src/components/Auth/Signup.css
@@ -118,6 +118,9 @@
             border: 2px solid #908D8D;
             border-radius: 8px;
             display: flex;
+            justify-content: space-between;
+            padding-left: 5px;
+            padding-right: 5px;
             gap:7px;
 
             & .signupInput{
