--- a/src/components/DetailsPage/TherapistDetails.css
+++ b/src/components/DetailsPage/TherapistDetails.css
@@ -36,7 +36,7 @@
 .TherapistDetailsName{
     height: 100%;
     width: 30%;
-    /* background: rebeccapurple; */
+    margin-bottom: 20px;
 
     & h1{
         font-family: var(--generalFontFamily--);
@@ -222,7 +222,7 @@
     justify-content: flex-end;
     padding: 10px;
 }
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 768px) {
     .TherapistNameAndPicture{
         height: max-content;
         flex-direction: column;
