--- a/src/components/BeforeLogin/Header/Header.css
+++ b/src/components/BeforeLogin/Header/Header.css
@@ -148,6 +148,7 @@
     background: transparent;
     position: absolute;
     top: 0;
+    bottom: 0;
     display: flex;
     justify-content: flex-end;
 }
