--- a/src/components/BeforeLogin/Header/Header.css
+++ b/src/components/BeforeLogin/Header/Header.css
@@ -137,7 +137,7 @@
     height: 100%;
     width: 15%;
     /* background: red; */
-    display: none;
+    display: none !important;
     justify-content: flex-end;
     align-items: center;
     display: flex;
@@ -158,7 +158,7 @@
         display: none;
     }
     .menu{
-        display: flex;
+        display: flex !important;
     }
     .Logobox{
         width: 28%;
